src/objects/GDMFSL_On_Demand_Assignment__c/GDMFSL_On_Demand_Assignment__c.object-meta.xml
<CustomObject>
    <label>On Demand Assignment</label>
    <nameField>
        <displayFormat>ODA-{0000}</displayFormat>
        <label>On Demand Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>On Demand Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>