src/objects/GDMFSL_On_Demand_Assignment__c/fields/GDMFSL_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_End_Date_Time__c</fullName>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>