src/objects/GDMFSL_On_Demand_Assignment__c/fields/GDMFSL_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>On Demand Assignments</relationshipLabel>
    <relationshipName>On_Demand_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>