src/objects/GDMFSL_On_Demand_Assignment__c/fields/GDMFSL_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Start_Date_Time__c</fullName>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>